sample dashboard, vendor service, use suggested name checkbox alignment issues

--- a/src/app/layout/vendor-service-country/vendor-service-country.component.scss
+++ b/src/app/layout/vendor-service-country/vendor-service-country.component.scss
@@ -1,4 +1,4 @@
-.label {
+/* .label {
     padding-top: 0.25rem;
     padding-bottom: 0.5rem;
     display: block;
@@ -30,4 +30,4 @@ input {
 .errorMessage{
 
     color: red !important;
-}
+} */
